--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,22 @@
 ---
-# tasks file for ntp
+# Install and configure the NTP deamon
+
+- name: ensure NTP daemon is installed
+  package:
+    name: "{{ __ntp_package }}"
+    state: present
+    update_cache: yes
+  become: yes
+
+- name: configure the NTP daemon
+  template: src=ntp.conf.j2 dest=/etc/ntp.conf
+  become: yes
+  notify:
+    - restart ntp
+
+- name: ensure NTP is running and enabled
+  service:
+    name: ntp
+    state: started
+    enabled: yes
+  become: yes
