--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
-# handlers file for ntp
+# Handlers for the NTP daemon
+
+- name: restart ntp
+  service:
+    name: "{{ __ntp_daemon }}"
+    state: restarted
+  become: yes
